@@ -1,224 +1,43 @@
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Server version name:   Apache Tomcat/9.0.71
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Server built:          Jan 9 2023 22:33:01 UTC
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Server version number: 9.0.71.0
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: OS Name:               Windows 11
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: OS Version:            10.0
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Architecture:          amd64
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Java Home:             C:\Users\arunkumar.gc\.p2\pool\plugins\org.eclipse.justj.openjdk.hotspot.jre.full.win32.x86_64_17.0.7.v20230425-1502\jre
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: JVM Version:           17.0.7+7
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: JVM Vendor:            Eclipse Adoptium
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: CATALINA_BASE:         C:\Users\arunkumar.gc\eclipse-workspace\.metadata\.plugins\org.eclipse.wst.server.core\tmp0
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: CATALINA_HOME:         C:\Users\arunkumar.gc\Documents\apache-tomcat-9.0.71\apache-tomcat-9.0.71
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Command line argument: -Dcatalina.base=C:\Users\arunkumar.gc\eclipse-workspace\.metadata\.plugins\org.eclipse.wst.server.core\tmp0
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Command line argument: -Dcatalina.home=C:\Users\arunkumar.gc\Documents\apache-tomcat-9.0.71\apache-tomcat-9.0.71
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Command line argument: -Dwtp.deploy=C:\Users\arunkumar.gc\eclipse-workspace\.metadata\.plugins\org.eclipse.wst.server.core\tmp0\wtpwebapps
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Command line argument: --add-opens=java.base/java.lang=ALL-UNNAMED
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Command line argument: --add-opens=java.base/java.io=ALL-UNNAMED
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Command line argument: --add-opens=java.base/java.util=ALL-UNNAMED
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Command line argument: --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Command line argument: --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Command line argument: -Dfile.encoding=UTF-8
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.VersionLoggerListener log
-INFO: Command line argument: -XX:+ShowCodeDetailsInExceptionMessages
-Jul 22, 2023 1:34:03 PM org.apache.catalina.core.AprLifecycleListener lifecycleEvent
-INFO: The Apache Tomcat Native library which allows using OpenSSL was not found on the java.library.path: [C:\Users\arunkumar.gc\.p2\pool\plugins\org.eclipse.justj.openjdk.hotspot.jre.full.win32.x86_64_17.0.7.v20230425-1502\jre\bin;C:\Windows\Sun\Java\bin;C:\Windows\system32;C:\Windows;C:/Users/arunkumar.gc/.p2/pool/plugins/org.eclipse.justj.openjdk.hotspot.jre.full.win32.x86_64_17.0.7.v20230425-1502/jre/bin/server;C:/Users/arunkumar.gc/.p2/pool/plugins/org.eclipse.justj.openjdk.hotspot.jre.full.win32.x86_64_17.0.7.v20230425-1502/jre/bin;C:\oraclexe\app\oracle\product\11.2.0\server\bin;C:\Program Files (x86)\Common Files\Oracle\Java\javapath;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Windows\System32\OpenSSH\;C:\Program Files\dotnet\;C:\Program Files\Microsoft VS Code\bin;C:\Program Files\nodejs\;C:\Program Files\Java\jdk1.8.0_311\bin;C:\Users\arunkumar.gc\AppData\Local\Microsoft\WindowsApps;;C:\Users\arunkumar.gc\AppData\Local\JetBrains\IntelliJ IDEA 2023.1.4\bin;;C:\Users\arunkumar.gc\AppData\Local\JetBrains\IntelliJ IDEA Community Edition 2023.1.4\bin;;C:\Users\arunkumar.gc\AppData\Roaming\npm;C:\Users\arunkumar.gc\eclipse\jee-2023-06\eclipse;;.]
-Jul 22, 2023 1:34:03 PM org.apache.coyote.AbstractProtocol init
-INFO: Initializing ProtocolHandler ["http-nio-8085"]
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.Catalina load
-INFO: Server initialization in [565] milliseconds
-Jul 22, 2023 1:34:03 PM org.apache.catalina.core.StandardService startInternal
-INFO: Starting service [Catalina]
-Jul 22, 2023 1:34:03 PM org.apache.catalina.core.StandardEngine startInternal
-INFO: Starting Servlet engine: [Apache Tomcat/9.0.71]
-Jul 22, 2023 1:34:03 PM org.apache.catalina.core.ContainerBase startInternal
-SEVERE: A child container failed during start
-java.util.concurrent.ExecutionException: org.apache.catalina.LifecycleException: Failed to start component [StandardEngine[Catalina].StandardHost[localhost].StandardContext[/One]]
-	at java.base/java.util.concurrent.FutureTask.report(FutureTask.java:122)
-	at java.base/java.util.concurrent.FutureTask.get(FutureTask.java:191)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:923)
-	at org.apache.catalina.core.StandardHost.startInternal(StandardHost.java:835)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1393)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1383)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at org.apache.tomcat.util.threads.InlineExecutorService.execute(InlineExecutorService.java:75)
-	at java.base/java.util.concurrent.AbstractExecutorService.submit(AbstractExecutorService.java:145)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:916)
-	at org.apache.catalina.core.StandardEngine.startInternal(StandardEngine.java:265)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.core.StandardService.startInternal(StandardService.java:430)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.core.StandardServer.startInternal(StandardServer.java:930)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.startup.Catalina.start(Catalina.java:772)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.apache.catalina.startup.Bootstrap.start(Bootstrap.java:347)
-	at org.apache.catalina.startup.Bootstrap.main(Bootstrap.java:478)
-Caused by: org.apache.catalina.LifecycleException: Failed to start component [StandardEngine[Catalina].StandardHost[localhost].StandardContext[/One]]
-	at org.apache.catalina.util.LifecycleBase.handleSubClassException(LifecycleBase.java:440)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:198)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1393)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1383)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at org.apache.tomcat.util.threads.InlineExecutorService.execute(InlineExecutorService.java:75)
-	at java.base/java.util.concurrent.AbstractExecutorService.submit(AbstractExecutorService.java:145)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:916)
-	... 21 more
-Caused by: java.lang.IllegalArgumentException: Invalid <url-pattern> [add] in servlet mapping
-	at org.apache.catalina.core.StandardContext.addServletMappingDecoded(StandardContext.java:3234)
-	at org.apache.catalina.Context.addServletMappingDecoded(Context.java:905)
-	at org.apache.catalina.startup.ContextConfig.configureContext(ContextConfig.java:1563)
-	at org.apache.catalina.startup.ContextConfig.webConfig(ContextConfig.java:1330)
-	at org.apache.catalina.startup.ContextConfig.configureStart(ContextConfig.java:987)
-	at org.apache.catalina.startup.ContextConfig.lifecycleEvent(ContextConfig.java:304)
-	at org.apache.catalina.util.LifecycleBase.fireLifecycleEvent(LifecycleBase.java:123)
-	at org.apache.catalina.core.StandardContext.startInternal(StandardContext.java:5127)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	... 27 more
+package com.arunsh;
 
-Jul 22, 2023 1:34:03 PM org.apache.catalina.core.ContainerBase startInternal
-SEVERE: A child container failed during start
-java.util.concurrent.ExecutionException: org.apache.catalina.LifecycleException: A child container failed during start
-	at java.base/java.util.concurrent.FutureTask.report(FutureTask.java:122)
-	at java.base/java.util.concurrent.FutureTask.get(FutureTask.java:191)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:923)
-	at org.apache.catalina.core.StandardEngine.startInternal(StandardEngine.java:265)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.core.StandardService.startInternal(StandardService.java:430)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.core.StandardServer.startInternal(StandardServer.java:930)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.startup.Catalina.start(Catalina.java:772)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.apache.catalina.startup.Bootstrap.start(Bootstrap.java:347)
-	at org.apache.catalina.startup.Bootstrap.main(Bootstrap.java:478)
-Caused by: org.apache.catalina.LifecycleException: A child container failed during start
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:935)
-	at org.apache.catalina.core.StandardHost.startInternal(StandardHost.java:835)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1393)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1383)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at org.apache.tomcat.util.threads.InlineExecutorService.execute(InlineExecutorService.java:75)
-	at java.base/java.util.concurrent.AbstractExecutorService.submit(AbstractExecutorService.java:145)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:916)
-	... 13 more
-Caused by: java.util.concurrent.ExecutionException: org.apache.catalina.LifecycleException: Failed to start component [StandardEngine[Catalina].StandardHost[localhost].StandardContext[/One]]
-	at java.base/java.util.concurrent.FutureTask.report(FutureTask.java:122)
-	at java.base/java.util.concurrent.FutureTask.get(FutureTask.java:191)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:923)
-	... 21 more
-Caused by: org.apache.catalina.LifecycleException: Failed to start component [StandardEngine[Catalina].StandardHost[localhost].StandardContext[/One]]
-	at org.apache.catalina.util.LifecycleBase.handleSubClassException(LifecycleBase.java:440)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:198)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1393)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1383)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at org.apache.tomcat.util.threads.InlineExecutorService.execute(InlineExecutorService.java:75)
-	at java.base/java.util.concurrent.AbstractExecutorService.submit(AbstractExecutorService.java:145)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:916)
-	... 21 more
-Caused by: java.lang.IllegalArgumentException: Invalid <url-pattern> [add] in servlet mapping
-	at org.apache.catalina.core.StandardContext.addServletMappingDecoded(StandardContext.java:3234)
-	at org.apache.catalina.Context.addServletMappingDecoded(Context.java:905)
-	at org.apache.catalina.startup.ContextConfig.configureContext(ContextConfig.java:1563)
-	at org.apache.catalina.startup.ContextConfig.webConfig(ContextConfig.java:1330)
-	at org.apache.catalina.startup.ContextConfig.configureStart(ContextConfig.java:987)
-	at org.apache.catalina.startup.ContextConfig.lifecycleEvent(ContextConfig.java:304)
-	at org.apache.catalina.util.LifecycleBase.fireLifecycleEvent(LifecycleBase.java:123)
-	at org.apache.catalina.core.StandardContext.startInternal(StandardContext.java:5127)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	... 27 more
+import java.io.IOException;
+import java.io.PrintWriter;
+import java.sql.Connection;
+import java.sql.DriverManager;
+import java.sql.PreparedStatement;
 
-Jul 22, 2023 1:34:03 PM org.apache.catalina.startup.Catalina start
-SEVERE: The required Server component failed to start so Tomcat is unable to start.
-org.apache.catalina.LifecycleException: A child container failed during start
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:935)
-	at org.apache.catalina.core.StandardEngine.startInternal(StandardEngine.java:265)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.core.StandardService.startInternal(StandardService.java:430)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.core.StandardServer.startInternal(StandardServer.java:930)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.startup.Catalina.start(Catalina.java:772)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.apache.catalina.startup.Bootstrap.start(Bootstrap.java:347)
-	at org.apache.catalina.startup.Bootstrap.main(Bootstrap.java:478)
-Caused by: java.util.concurrent.ExecutionException: org.apache.catalina.LifecycleException: A child container failed during start
-	at java.base/java.util.concurrent.FutureTask.report(FutureTask.java:122)
-	at java.base/java.util.concurrent.FutureTask.get(FutureTask.java:191)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:923)
-	... 13 more
-Caused by: org.apache.catalina.LifecycleException: A child container failed during start
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:935)
-	at org.apache.catalina.core.StandardHost.startInternal(StandardHost.java:835)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1393)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1383)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at org.apache.tomcat.util.threads.InlineExecutorService.execute(InlineExecutorService.java:75)
-	at java.base/java.util.concurrent.AbstractExecutorService.submit(AbstractExecutorService.java:145)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:916)
-	... 13 more
-Caused by: java.util.concurrent.ExecutionException: org.apache.catalina.LifecycleException: Failed to start component [StandardEngine[Catalina].StandardHost[localhost].StandardContext[/One]]
-	at java.base/java.util.concurrent.FutureTask.report(FutureTask.java:122)
-	at java.base/java.util.concurrent.FutureTask.get(FutureTask.java:191)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:923)
-	... 21 more
-Caused by: org.apache.catalina.LifecycleException: Failed to start component [StandardEngine[Catalina].StandardHost[localhost].StandardContext[/One]]
-	at org.apache.catalina.util.LifecycleBase.handleSubClassException(LifecycleBase.java:440)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:198)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1393)
-	at org.apache.catalina.core.ContainerBase$StartChild.call(ContainerBase.java:1383)
-	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
-	at org.apache.tomcat.util.threads.InlineExecutorService.execute(InlineExecutorService.java:75)
-	at java.base/java.util.concurrent.AbstractExecutorService.submit(AbstractExecutorService.java:145)
-	at org.apache.catalina.core.ContainerBase.startInternal(ContainerBase.java:916)
-	... 21 more
-Caused by: java.lang.IllegalArgumentException: Invalid <url-pattern> [add] in servlet mapping
-	at org.apache.catalina.core.StandardContext.addServletMappingDecoded(StandardContext.java:3234)
-	at org.apache.catalina.Context.addServletMappingDecoded(Context.java:905)
-	at org.apache.catalina.startup.ContextConfig.configureContext(ContextConfig.java:1563)
-	at org.apache.catalina.startup.ContextConfig.webConfig(ContextConfig.java:1330)
-	at org.apache.catalina.startup.ContextConfig.configureStart(ContextConfig.java:987)
-	at org.apache.catalina.startup.ContextConfig.lifecycleEvent(ContextConfig.java:304)
-	at org.apache.catalina.util.LifecycleBase.fireLifecycleEvent(LifecycleBase.java:123)
-	at org.apache.catalina.core.StandardContext.startInternal(StandardContext.java:5127)
-	at org.apache.catalina.util.LifecycleBase.start(LifecycleBase.java:183)
-	... 27 more
+import javax.servlet.annotation.WebServlet;
+import javax.servlet.http.HttpServlet;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 
-Jul 22, 2023 1:34:03 PM org.apache.coyote.AbstractProtocol pause
-INFO: Pausing ProtocolHandler ["http-nio-8085"]
-Jul 22, 2023 1:34:03 PM org.apache.catalina.core.StandardService stopInternal
-INFO: Stopping service [Catalina]
-Jul 22, 2023 1:34:03 PM org.apache.coyote.AbstractProtocol destroy
-INFO: Destroying ProtocolHandler ["http-nio-8085"]
+@WebServlet("/addStudent")
+public class StudentService extends HttpServlet{
+
+	public void doPost(HttpServletRequest req,HttpServletResponse res) throws IOException{
+		String name = req.getParameter("sname");
+		String action = req.getParameter("action");
+		if(action.equals("post")) {
+			Student s = new Student(name);
+			this.addStudent(s);
+		}
+		PrintWriter pr = res.getWriter();
+		pr.println(action);
+	} 
+	public Student addStudent(Student student){
+		try {
+			Class.forName("com.mysql.jdbc.Driver");
+			Connection con = DriverManager.getConnection("jdbc:mysql://localhost:3306/school","root","root");
+			String sql = "INSERT INTO school.student ('"+student.getName()+"','"+student.getId()+"');";
+			PreparedStatement ps = con.prepareStatement(sql);
+			ps.executeUpdate();
+			ps.close();
+			con.close();
+		}
+		catch(Exception e) {
+			
+		}
+		return student;
+	}
+	
+}
